# dump_script

./: .env.example  .gitignore  pyproject.toml
src/: database.py  main.py
